--- a/abcssp/intro/chp_intro.tex
+++ b/abcssp/intro/chp_intro.tex
@@ -36,11 +36,11 @@
   \input{intro/sets.tex}
   \input{intro/relations.tex}
   \input{intro/fieldops.tex}
-  \input{sto/graph.tex}
+  \input{intro/graph.tex}
 
 \section{Order space concepts}
   \input{intro/order.tex}
-  \input{sto/lattice.tex}
+  \input{intro/lattice.tex}
   \input{../common/isomorphic.tex}
   \input{../common/argmin.tex}
 
