--- a/common/interpo.tex
+++ b/common/interpo.tex
@@ -2,25 +2,31 @@
 % Daniel J. Greenhoe
 % XeLaTeX file
 %============================================================================
-
-
-
-
 %=======================================
 \chapter{Interpolation}
 %=======================================
 %=======================================
 \section{Polynomial interpolation}
 %=======================================
+%=======================================
+\subsection{Lagrange interpolation}
+%=======================================
 %--------------------------------------
 \begin{definition}
-\label{def:Ln(x)}
-\citetbl{
-  \citerp{matthews}{206}
+\footnote{
+  \citePp{waring1779}{60},
+  \citePpc{euler1783}{165}{\textsection. 10. Problema 2. Corollarium 3.},
+  \citeP{gauss1866},
+  \citeP{lagrange1877},
+  \citerp{matthews}{206},
+  \citePc{meijering2002}{historical background}
   }
+\label{def:Ln(x)}
+\label{def:lagpoly}
+\label{def:laginterp}
 \index{polynomial!Lagrange}
 %--------------------------------------
-The \hid{Lagrange polynomial} $L_{P,n}(x)$ with respect to the $n+1$ points \\
+The \structd{Lagrange polynomial} $L_{P,n}(x)$ with respect to the $n+1$ points \\
 $P=\set{(x_k,y_k)}{k=0,1,2,\ldots,n}$ is defined as
 \defbox{
   L_{P,n}(x) \eqd \sum_{k=0}^n y_k \prod_{m\ne n} \frac{x-x_m}{x_k-x_m}
@@ -44,7 +50,7 @@ $P=\set{(x_k,y_k)}{k=0,1,2,\ldots,n}$.
 The {Lagrange polynomial} $L_{P,3}(x)$ with respect to the $4$ points\\
 $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
 \exbox{
-  L_{P,3}(x) = \frac{   79}{840} x^3 
+  L_{P,3}(x) = \frac{   79}{840} x^3
              + \frac{- 378}{840} x^2
              + \frac{-   7}{840} x
              + \frac{ 2970}{840}
@@ -54,15 +60,15 @@ $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
 \begin{align*}
   L_{P,3}(x)
     &= \sum_{k=0}^n y_k \prod_{m\ne n} \frac{x-x_m}{x_k-x_m}
-    \qquad\text{by Definition~\ref{def:Ln(x)}}
+    \qquad\text{by \prefp{def:Ln(x)}}
   \\&=  y_0\frac{(x+1)(x-3)(x-5)}{(x_0-x_1)(x_0-x_2)(x_0-x_3)} +
-        y_1\frac{(x+2)(x-3)(x-5)}{(x_1-x_0)(x_1-x_2)(x_1-x_3)} 
+        y_1\frac{(x+2)(x-3)(x-5)}{(x_1-x_0)(x_1-x_2)(x_1-x_3)}
   \\&\quad+
         y_2\frac{(x+2)(x+1)(x-5)}{(x_2-x_0)(x_2-x_1)(x_2-x_3)} +
         y_3\frac{(x+2)(x+1)(x-3)}{(x_3-x_0)(x_3-x_1)(x_3-x_2)}
 %
   \\&=  1\frac{(x+1)(x-3)(x-5)}{(-2+1)(-2-3)(-2-5)} +
-        3\frac{(x+2)(x-3)(x-5)}{(-1+2)(-1-3)(-1-5)} 
+        3\frac{(x+2)(x-3)(x-5)}{(-1+2)(-1-3)(-1-5)}
   \\&\quad+
         2\frac{(x+2)(x+1)(x-5)}{(3+2)(3+1)(3-5)}    +
         4\frac{(x+2)(x+1)(x-3)}{(5+2)(5+1)(5-3)}
@@ -70,10 +76,10 @@ $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
         3\mcom{\frac{x^3-6x^2-x+30}{24}  }{roots=$-2,3,5$}   +
         2\mcom{\frac{x^3-2x^2-13x-10}{-40}}{roots=$-2,-1,5$}  +
         4\mcom{\frac{x^3-7x-6}{84}        }{roots=$-2,-1,3$}
-  \\&= -  \frac{x^3-7x^2+7x+15}{35}  
-       +  \frac{x^3-6x^2-x+30}{8}   
-       -  \frac{x^3-2x^2-13x-10}{20}  
-       +  \frac{x^3-7x-6}{21}       
+  \\&= -  \frac{x^3-7x^2+7x+15}{35}
+       +  \frac{x^3-6x^2-x+30}{8}
+       -  \frac{x^3-2x^2-13x-10}{20}
+       +  \frac{x^3-7x-6}{21}
   \\&=   x^3 \left(
          \frac{-8\cdot20\cdot21 +35\cdot20\cdot21 - 35\cdot8\cdot21 + 35\cdot8\cdot20}
               {35 \cdot 8 \cdot 20 \cdot 21}
@@ -107,13 +113,20 @@ $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
 
 %--------------------------------------
 \begin{definition}
-\label{def:Nn(x)}
-\citetbl{
+\footnote{
+  \citeI{newton1711},
+  \citeIppc{fraser1919}{9}{17}{Methodus differentialis: ``A photographic reproduction of the original Latin text"},
+  \citeIppc{fraser1919}{18}{25}{Methodus differentialis: English translation},
+  \citerppc{fraser1919}{1}{8}{historical background and notes},
+  \citePc{meijering2002}{historical background},
   \citerp{matthews}{220}
   }
+\label{def:Nn(x)}
+\label{def:newpoly}
+\label{def:newinterp}
 \index{polynomial!Newton}
 %--------------------------------------
-The \hid{Newton polynomial} $N_{P,n}(x)$ with respect to the $n+1$ points\\
+The \structd{Newton polynomial} $N_{P,n}(x)$ with respect to the $n+1$ points\\
 $P=\set{(x_k,y_k)}{k=0,1,2,\ldots,n}$ is defined as
 \defbox{
   N_{P,n}(x) \eqd \sum_{k=0}^n \alpha_k \prod_{m=0}^k (x-x_m)
@@ -136,209 +149,211 @@ $P=\set{(x_k,y_k)}{k=0,1,2,\ldots,n}$.
 \begin{example}[Newton polynomial interpolation]
 \index{polynomial!Newton}
 %--------------------------------------
-The {Newton polynomial} $N_{P,3}(x)$ with respect to the $4$ points\\
-$P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
-\exbox{
+\exboxt{
+The {Newton polynomial} $N_{P,3}(x)$ with respect to the $4$ points
+\\\indentx$P=\setn{(-2,1),\; (-1,3),\; (3,2),\; (5,4)}$ is
+$
   N_{P,3}(x) = \frac{   79}{840} x^3
              + \frac{- 378}{840} x^2
              + \frac{-   7}{840} x
              + \frac{ 2970}{840}
+$
   }
 \end{example}
 \begin{proof}
 \begin{align*}
   N_{P,3}(x)
     &= \sum_{k=0}^n \alpha_k \prod_{m=1}^k (x-x_m)
-  \\&= \alpha_0 + \alpha_1(x-x_0) + \alpha_2(x-x_0)(x-x_1) + \alpha_3(x-x_0)(x-x_1)(x-x_2) 
-  \\&= \alpha_0 + \alpha_1(x+2) + \alpha_2(x+2)(x+1) + \alpha_3(x+2)(x+1)(x-3) 
+  \\&= \alpha_0 + \alpha_1(x-x_0) + \alpha_2(x-x_0)(x-x_1) + \alpha_3(x-x_0)(x-x_1)(x-x_2)
+  \\&= \alpha_0 + \alpha_1(x+2) + \alpha_2(x+2)(x+1) + \alpha_3(x+2)(x+1)(x-3)
   \\&= \alpha_0 + \alpha_1(x+2) + \alpha_2(x^2+3x+2) + \alpha_3(x^3-7x-6)
   \\&= x^3(\alpha_3) + x^2(\alpha_2) + x(-7\alpha_3+3\alpha_2+\alpha_1)
       +(-6\alpha_3 + 2\alpha_2 + 2\alpha_1 + \alpha_0)
-  \\&= \Big[ \alpha_0 \; \alpha_1 \; \alpha_2 \; \alpha_3 \Big] 
-       \left[\begin{array}{rrrr}
+  \\&= \Big[ \alpha_0 \; \alpha_1 \; \alpha_2 \; \alpha_3 \Big]
+       \brs{\begin{array}{rrrr}
           1  &   0  & 0  & 0  \\
           2  &   1  & 0  & 0  \\
           2  &   3  & 1  & 0  \\
          -6  &  -7  & 0  & 1
-       \end{array}\right]
-       \left[\begin{array}{l}
+       \end{array}}
+       \brs{\begin{array}{l}
          1   \\
          x   \\
          x^2 \\
          x^3
-       \end{array}\right]
+       \end{array}}
   \\
   \\
-  \left[\begin{array}{l}
+  \brs{\begin{array}{l}
      1  \\
      3  \\
      2  \\
-     4  
-  \end{array}\right]
-    &= \left[\begin{array}{l}
+     4
+  \end{array}}
+    &= \brs{\begin{array}{l}
          y_0 \\
          y_1 \\
          y_2 \\
-         y_3 
-       \end{array}\right]
-  \\&= \left[\begin{array}{llll}
+         y_3
+       \end{array}}
+  \\&= \brs{\begin{array}{llll}
          1 & 0         & 0                  & 0                           \\
          1 & (x_1-x_0) & 0                  & 0                           \\
          1 & (x_2-x_0) & (x_2-x_0)(x_2-x_1) & 0                           \\
-         1 & (x_3-x_0) & (x_3-x_0)(x_3-x_1) & (x_3-x_0)(x_3-x_1)(x_3-x_2) 
-       \end{array}\right]
-       \left[\begin{array}{l}
+         1 & (x_3-x_0) & (x_3-x_0)(x_3-x_1) & (x_3-x_0)(x_3-x_1)(x_3-x_2)
+       \end{array}}
+       \brs{\begin{array}{l}
          \alpha_0 \\
          \alpha_1 \\
          \alpha_2 \\
-         \alpha_3 
-       \end{array}\right]
-  \\&= \left[\begin{array}{llll}
+         \alpha_3
+       \end{array}}
+  \\&= \brs{\begin{array}{llll}
          1 & 0     & 0          & 0                           \\
          1 & (-1+2)& 0          & 0                           \\
          1 & (3+2) & (3+2)(3+1) & 0                           \\
-         1 & (5+2) & (5+2)(5+1) & (5+2)(5+1)(5-3) 
-       \end{array}\right]
-       \left[\begin{array}{l}
+         1 & (5+2) & (5+2)(5+1) & (5+2)(5+1)(5-3)
+       \end{array}}
+       \brs{\begin{array}{l}
          \alpha_0 \\
          \alpha_1 \\
          \alpha_2 \\
-         \alpha_3 
-       \end{array}\right]
-  \\&= \left[\begin{array}{llll}
+         \alpha_3
+       \end{array}}
+  \\&= \brs{\begin{array}{llll}
          1 & 0     & 0          & 0                           \\
          1 & 1     & 0          & 0                           \\
          1 & 5     & 20         & 0                           \\
-         1 & 7     & 42         & 84                
-       \end{array}\right]
-       \left[\begin{array}{l}
+         1 & 7     & 42         & 84
+       \end{array}}
+       \brs{\begin{array}{l}
          \alpha_0 \\
          \alpha_1 \\
          \alpha_2 \\
-         \alpha_3 
-       \end{array}\right]
+         \alpha_3
+       \end{array}}
   \end{align*}
 
   \begin{align*}
-  \left[\begin{array}{*{8}{r}}
+  \brs{\begin{array}{*{8}{r}}
     1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
     1 & 1 & 0  & 0  & 0 & 1 & 0 & 0 \\
     1 & 5 & 20 & 0  & 0 & 0 & 1 & 0 \\
     1 & 7 & 42 & 84 & 0 & 0 & 0 & 1
-  \end{array}\right]
-    &= \left[\begin{array}{*{8}{r}}
+  \end{array}}
+    &= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 5 & 20 & 0  &-1 & 0 & 1 & 0 \\
          0 & 7 & 42 & 84 &-1 & 0 & 0 & 1
-       \end{array}\right]
-  \\&= \left[\begin{array}{*{8}{r}}
+       \end{array}}
+  \\&= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 0 & 20 & 0  & 4 &-5 & 1 & 0 \\
          0 & 0 & 42 & 84 & 6 &-7 & 0 & 1
-       \end{array}\right]
-  \\&= \left[\begin{array}{*{8}{r}}
+       \end{array}}
+  \\&= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 0 & 1  & 0  &\frac{1}{5} &-\frac{1}{4} & \frac{1}{20} & 0 \\
          0 & 0 & 42 & 84 & 6 &-7 & 0 & 1
-       \end{array}\right]
-  \\&= \left[\begin{array}{*{8}{r}}
+       \end{array}}
+  \\&= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 0 & 1  & 0  &\frac{1}{5} &-\frac{1}{4} & \frac{1}{20} & 0 \\
          0 & 0 & 0  & 84 & 6-\frac{42}{5} &-7+\frac{42}{4} & -\frac{42}{20} & 1
-       \end{array}\right]
-  \\&= \left[\begin{array}{*{8}{r}}
+       \end{array}}
+  \\&= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 0 & 1  & 0  &\frac{1}{5} &-\frac{1}{4} & \frac{1}{20} & 0 \\
          0 & 0 & 0  & 84 & -\frac{12}{5} &\frac{14}{4} & -\frac{42}{20} & 1
-       \end{array}\right]
-  \\&= \left[\begin{array}{*{8}{r}}
+       \end{array}}
+  \\&= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 0 & 1  & 0  &\frac{4}{20} &-\frac{5}{20} & \frac{1}{20} & 0 \\
          0 & 0 & 0  & 84 & -\frac{24}{10} &\frac{35}{10} & -\frac{21}{10} & \frac{10}{10}
-       \end{array}\right]
-  \\&= \left[\begin{array}{*{8}{r}}
+       \end{array}}
+  \\&= \brs{\begin{array}{*{8}{r}}
          1 & 0 & 0  & 0  & 1 & 0 & 0 & 0 \\
          0 & 1 & 0  & 0  &-1 & 1 & 0 & 0 \\
          0 & 0 & 1  & 0  &\frac{4}{20} &-\frac{5}{20} & \frac{1}{20} & 0 \\
          0 & 0 & 0  & 1  & -\frac{24}{840} &\frac{35}{840} & -\frac{21}{840} & \frac{10}{840}
-       \end{array}\right]
+       \end{array}}
   \end{align*}
 
   \begin{align*}
-  \left[\begin{array}{l}
+  \brs{\begin{array}{l}
     \alpha_0 \\
     \alpha_1 \\
     \alpha_2 \\
-    \alpha_3 
-  \end{array}\right]
-    &= \left[\begin{array}{*{4}{r}}
+    \alpha_3
+  \end{array}}
+    &= \brs{\begin{array}{*{4}{r}}
           1 & 0 & 0 & 0 \\
          -1 & 1 & 0 & 0 \\
          \frac{4}{20} &-\frac{5}{20} & \frac{1}{20} & 0 \\
           -\frac{24}{840} &\frac{35}{840} & -\frac{21}{840} & \frac{10}{840}
-       \end{array}\right]
-       \left[\begin{array}{l}
+       \end{array}}
+       \brs{\begin{array}{l}
          1 \\
          3 \\
          2 \\
-         4 
-       \end{array}\right]
-  \\&= \left[\begin{array}{l}
+         4
+       \end{array}}
+  \\&= \brs{\begin{array}{l}
          1 \\
          2 \\
          -\frac{9}{20} \\
-         \frac{79}{840} 
-       \end{array}\right]
+         \frac{79}{840}
+       \end{array}}
   \\
   \\
   \\
   N_{P,3}(x)
-    &= \Big[ \alpha_0 \; \alpha_1 \; \alpha_2 \; \alpha_3 \Big] 
-       \left[\begin{array}{rrrr}
+    &= \Big[ \alpha_0 \; \alpha_1 \; \alpha_2 \; \alpha_3 \Big]
+       \brs{\begin{array}{rrrr}
           1  &   0  & 0  & 0  \\
           2  &   1  & 0  & 0  \\
           2  &   3  & 1  & 0  \\
          -6  &  -7  & 0  & 1
-       \end{array}\right]
-       \left[\begin{array}{l}
+       \end{array}}
+       \brs{\begin{array}{l}
          1   \\
          x   \\
          x^2 \\
          x^3
-       \end{array}\right]
-  \\&= \left[\begin{array}{c|c|c|c} 
-         1 & 2 & -\frac{9}{20} & \frac{79}{840} 
-       \end{array}\right]
-       \left[\begin{array}{rrrr}
+       \end{array}}
+  \\&= \brs{\begin{array}{c|c|c|c}
+         1 & 2 & -\frac{9}{20} & \frac{79}{840}
+       \end{array}}
+       \brs{\begin{array}{rrrr}
           1  &   0  & 0  & 0  \\
           2  &   1  & 0  & 0  \\
           2  &   3  & 1  & 0  \\
          -6  &  -7  & 0  & 1
-       \end{array}\right]
-       \left[\begin{array}{l}
+       \end{array}}
+       \brs{\begin{array}{l}
          1   \\
          x   \\
          x^2 \\
          x^3
-       \end{array}\right]
-  \\&= \left[\begin{array}{c|c|c|c}
+       \end{array}}
+  \\&= \brs{\begin{array}{c|c|c|c}
           1 + 4 - \frac{9}{10} - \frac{79}{140}  &
           2 - \frac{27}{20} -\frac{79}{120}      &
           -\frac{9}{20}                          &
           \frac{79}{840}
-       \end{array}\right]
-       \left[\begin{array}{l}
+       \end{array}}
+       \brs{\begin{array}{l}
          1   \\
          x   \\
          x^2 \\
          x^3
-       \end{array}\right]
+       \end{array}}
   \\&= \frac{79}{840}x^3 - \frac{378}{840}x^2 - \frac{7}{840}x + \frac{2970}{840}
 \end{align*}
 \end{proof}
@@ -366,166 +381,166 @@ $P=\{(-2,1),\; (-1,3),\; (3,2),\; (5,4)\}$ is
   }
 \end{example}
 \begin{proof}
-%The {\em least squares} technique is presented in 
+%The {\em least squares} technique is presented in
 %Section~\ref{sec:ls} (page~\pageref{sec:ls}).
 \[
   \vx
     =
-    \left[\begin{array}{l}
+    \brs{\begin{array}{l}
        x_0  \\
        x_1  \\
        x_2  \\
-       x_3  
-    \end{array}\right] 
+       x_3
+    \end{array}}
     =
-    \left[\begin{array}{r}
+    \brs{\begin{array}{r}
        -2   \\
        -1   \\
         3   \\
-        5   
-    \end{array}\right] 
+        5
+    \end{array}}
    \qquad\qquad
-   \vy 
+   \vy
      =
-     \left[\begin{array}{r}
+     \brs{\begin{array}{r}
          1   \\
          3   \\
          2   \\
          4   \\
-     \end{array}\right] 
+     \end{array}}
      =
-     \left[\begin{array}{l}
+     \brs{\begin{array}{l}
          1   \\
          3   \\
          2   \\
          4   \\
-     \end{array}\right] 
+     \end{array}}
 \]
 
-We want to find a third order polynomial 
+We want to find a third order polynomial
   \[ d x^3 + c x^2 + bx + a \]
 that best approximates
 the 4 points in the least squares sense.
 We define the matrix $U$ (known) and vector $\estn$ (to be computed)
 as follows:
 \[
-   U^H \eqd 
-   \left[\begin{array}{llll}
+   U^H \eqd
+   \brs{\begin{array}{llll}
       1  & x_0 & x_0^2 & x_0^3  \\
       1  & x_1 & x_1^2 & x_1^3  \\
       1  & x_2 & x_2^2 & x_2^3  \\
-      1  & x_3 & x_3^2 & x_3^3  
-   \end{array}\right]
+      1  & x_3 & x_3^2 & x_3^3
+   \end{array}}
    \qquad\qquad
-   \estn \eqd 
-   \left[\begin{array}{l}
+   \estn \eqd
+   \brs{\begin{array}{l}
       a  \\
       b  \\
       c  \\
       d
-   \end{array}\right] 
+   \end{array}}
 \]
 Then, using \thme{Least squares}\ifsxref{estimate}{thm:ls}, the best coefficients for the polynomial are
 \begin{align*}
   \estn
-    &= \left[\begin{array}{l}
+    &= \brs{\begin{array}{l}
           a  \\
           b  \\
           c  \\
           d
-       \end{array}\right] 
+       \end{array}}
   \\&= R^{-1}W
   \\&= (UU^H)^{-1}\; (U\vy)
   \\&= \left(
-   \left[\begin{array}{llll}
+   \brs{\begin{array}{llll}
       1  & x_0 & x_0^2 & x_0^3  \\
       1  & x_1 & x_1^2 & x_1^3  \\
       1  & x_2 & x_2^2 & x_2^3  \\
-      1  & x_3 & x_3^2 & x_3^3  
-   \end{array}\right]^H
-   \left[\begin{array}{llll}
+      1  & x_3 & x_3^2 & x_3^3
+   \end{array}}^H
+   \brs{\begin{array}{llll}
       1  & x_0 & x_0^2 & x_0^3  \\
       1  & x_1 & x_1^2 & x_1^3  \\
       1  & x_2 & x_2^2 & x_2^3  \\
-      1  & x_3 & x_3^2 & x_3^3  
-   \end{array}\right]
+      1  & x_3 & x_3^2 & x_3^3
+   \end{array}}
        \right)^{-1}
        \left(
-   \left[\begin{array}{llll}
+   \brs{\begin{array}{llll}
       1  & x_0 & x_0^2 & x_0^3  \\
       1  & x_1 & x_1^2 & x_1^3  \\
       1  & x_2 & x_2^2 & x_2^3  \\
-      1  & x_3 & x_3^2 & x_3^3  
-   \end{array}\right]^H
-       \left[\begin{array}{l}
+      1  & x_3 & x_3^2 & x_3^3
+   \end{array}}^H
+       \brs{\begin{array}{l}
           y_0  \\
           y_1  \\
           y_2  \\
-          y_3  
-       \end{array}\right] 
+          y_3
+       \end{array}}
        \right)
   \\&= \left(
-   \left[\begin{array}{rrrr}
+   \brs{\begin{array}{rrrr}
       1  & (-2) & (-2)^2 & (-2)^3  \\
       1  & (-1) & (-1)^2 & (-1)^3  \\
       1  & (3) & (3)^2 & (3)^3  \\
-      1  & (5) & (5)^2 & (5)^3  
-   \end{array}\right]^H
-   \left[\begin{array}{rrrr}
+      1  & (5) & (5)^2 & (5)^3
+   \end{array}}^H
+   \brs{\begin{array}{rrrr}
       1  & (-2) & (-2)^2 & (-2)^3  \\
       1  & (-1) & (-1)^2 & (-1)^3  \\
       1  & (3) & (3)^2 & (3)^3  \\
-      1  & (5) & (5)^2 & (5)^3  
-   \end{array}\right]
+      1  & (5) & (5)^2 & (5)^3
+   \end{array}}
        \right)^{-1}
        \left(
-   \left[\begin{array}{rrrr}
+   \brs{\begin{array}{rrrr}
       1  & (-2) & (-2)^2 & (-2)^3  \\
       1  & (-1) & (-1)^2 & (-1)^3  \\
       1  & (3) & (3)^2 & (3)^3  \\
-      1  & (5) & (5)^2 & (5)^3  
-   \end{array}\right]^H
-       \left[\begin{array}{l}
+      1  & (5) & (5)^2 & (5)^3
+   \end{array}}^H
+       \brs{\begin{array}{l}
           1  \\
           3  \\
           2  \\
-          4  
-       \end{array}\right] 
+          4
+       \end{array}}
        \right)
   \\&= \left(
-   \left[\begin{array}{rrrr}
+   \brs{\begin{array}{rrrr}
       1  & -2 &  4 &  -8  \\
       1  & -1 &  1 &  -1  \\
       1  &  3 &  9 &  27  \\
-      1  &  5 & 25 & 125  
-   \end{array}\right]^H
-   \left[\begin{array}{rrrr}
+      1  &  5 & 25 & 125
+   \end{array}}^H
+   \brs{\begin{array}{rrrr}
       1  & -2 &  4 &  -8  \\
       1  & -1 &  1 &  -1  \\
       1  &  3 &  9 &  27  \\
-      1  &  5 & 25 & 125  
-   \end{array}\right]
+      1  &  5 & 25 & 125
+   \end{array}}
        \right)^{-1}
        \left(
-   \left[\begin{array}{rrrr}
+   \brs{\begin{array}{rrrr}
       1  & -2 &  4 &  -8  \\
       1  & -1 &  1 &  -1  \\
       1  &  3 &  9 &  27  \\
-      1  &  5 & 25 & 125  
-   \end{array}\right]^H
-       \left[\begin{array}{l}
+      1  &  5 & 25 & 125
+   \end{array}}^H
+       \brs{\begin{array}{l}
           1  \\
           3  \\
           2  \\
-          4  
-       \end{array}\right] 
+          4
+       \end{array}}
        \right)
-\\&= \left[\begin{array}{r}
+\\&= \brs{\begin{array}{r}
        2970   \\
          -7   \\
        -378   \\
          79
-     \end{array}\right]
+     \end{array}}
 \end{align*}
 \end{proof}
 
@@ -608,7 +623,7 @@ Then, using \thme{Least squares}\ifsxref{estimate}{thm:ls}, the best coefficient
   \label{fig:lphp}
   }
 \end{figure}
-The  quadrature condition can be expressed as a polynomial 
+The  quadrature condition can be expressed as a polynomial
 in $y=\sin^2\frac{\omega}{2}$\ifsxref{compactp}{lem:quadcon_y}.
 The first term in this polynomial quadrature condition is a
 low-pass response and the second term is a high pass;
@@ -626,27 +641,27 @@ This is illustrated in \prefpp{fig:lphp}.
 \label{thm:interpo_hermite}
 %--------------------------------------
 \thmbox{\begin{array}{*{3}{>{\ds}l}D}
-  \left.\deriv{^n}{y^n} \left[
+  \left.\deriv{^n}{y^n} \brs{
         (1-y)^p \sum_{k=0}^{p-1}{p+k-1\choose k} y^k
-        \right]\right|_{y=0}
+        }\right|_{y=0}
     &=& \kdelta_n
     &   for $n=0,1,2,\ldots,p-1$
   \\
-  \left.\deriv{^n}{y^n} \left[
+  \left.\deriv{^n}{y^n} \brs{
         (1-y)^p \sum_{k=0}^{p-1} {p+k-1\choose k} y^k
-        \right]\right|_{y=1}
+        }\right|_{y=1}
     &=& 0
     &   for $n=0,1,2,\ldots,p-1$
   \\
-  \left.\deriv{^n}{y^n} \left[
+  \left.\deriv{^n}{y^n} \brs{
         y^p \sum_{k=0}^{p-1}{p+k-1\choose k} (1-y)^k
-        \right]\right|_{y=0}
+        }\right|_{y=0}
     &=& 0
     &   for $n=0,1,2,\ldots,p-1$
   \\
-  \left.\deriv{^n}{y^n} \left[
+  \left.\deriv{^n}{y^n} \brs{
         y^p \sum_{k=0}^{p-1} {p+k-1\choose k} (1-y)^k
-        \right]\right|_{y=1}
+        }\right|_{y=1}
     &=& \kdelta_n
     &   for $n=0,1,2,\ldots,p-1$
   \end{array}}
@@ -665,14 +680,14 @@ Let
   \begin{align*}
   \ff(0)
     &= \left.(1-y)^p \sum_{m=0}^{p-1} {p-1+m\choose m} y^m \right|_{y=0}
-  \\&= \left.(1-y)^p \left[{p-1 \choose 0} + \sum_{m=1}^{p-1} {p-1+m\choose m} y^m\right]\right|_{y=0}
+  \\&= \left.(1-y)^p \brs{{p-1 \choose 0} + \sum_{m=1}^{p-1} {p-1+m\choose m} y^m}\right|_{y=0}
   \\&= 1
   \end{align*}
 
   \item Proof that
       $\ds\ff(y)=
        p \sum_{n=0}^{2p-1}
-       \left[\sum_{k=\max(0,n-q)}^{\min(n,p)} (-1)^k \frac{(p+n-k-1)!}{(p-k)!(n-k)!\,k!}\right]
+       \brs{\sum_{k=\max(0,n-q)}^{\min(n,p)} (-1)^k \frac{(p+n-k-1)!}{(p-k)!(n-k)!\,k!}}
        y^n$:
   \begin{align*}
   (1-y)^p \fP_m(y)
@@ -684,19 +699,19 @@ Let
   \\&= \sum_{n=0}^{2p-1} \sum_{k=\max(0,n-q)}^{\min(n,p)}
        (-1)^k \frac{p!}{(p-k)!k!} \frac{(p-1+n-k)!}{(p-1)!(n-k)!} y^n
   \\&= p \sum_{n=0}^{2p-1}
-       \left[\sum_{k=\max(0,n-q)}^{\min(n,p)} (-1)^k \frac{(p+n-k-1)!}{(p-k)!(n-k)!\,k!}\right]
+       \brs{\sum_{k=\max(0,n-q)}^{\min(n,p)} (-1)^k \frac{(p+n-k-1)!}{(p-k)!(n-k)!\,k!}}
        y^n
   \end{align*}
 
   \item Proof that $\ff^{(n)}(0)=\kdelta_n$ for $n=0,1,2,\ldots,p-1$:
   \begin{align*}
-  \left.\deriv{^n}{y^n}\left[ (1-y)^p \fP_m(y) \right]\right|_{y=0}
+  \left.\deriv{^n}{y^n}\brs{ (1-y)^p \fP_m(y) }\right|_{y=0}
     &= \left.
-       \deriv{^n}{y^n}\left[
+       \deriv{^n}{y^n}\brs{
          p \sum_{m=0}^{2p-1}
-         \left[\sum_{k=\max(0,m-q)}^{\min(m,p)} (-1)^k \frac{(p+m-k-1)!}{(p-k)!(m-k)!\,k!}\right]
+         \brs{\sum_{k=\max(0,m-q)}^{\min(m,p)} (-1)^k \frac{(p+m-k-1)!}{(p-k)!(m-k)!\,k!}}
          y^m
-       \right]
+       }
        \right|_{y=0}
     && \text{by 1.}
   \\&= \left. p
@@ -712,30 +727,30 @@ Let
 
   \item Proof that $\ff^{(n)}(0)=\kdelta_n$ for $n=0,1,2,\ldots,p-1$:
   \begin{align*}
-  &\left.\deriv{^n}{y^n}\left[ (1-y)^p \fP_m(y) \right]\right|_{y=0}
+  &\left.\deriv{^n}{y^n}\brs{ (1-y)^p \fP_m(y) }\right|_{y=0}
   \\&= \left.
        \sum_{k=0}^n {n\choose k}
-       \left[\deriv{^{n-k}}{y^{n-k}} (1-y)^p \right]
-       \left[\deriv{^k}{y^k}\fP_m(y) \right]
+       \brs{\deriv{^{n-k}}{y^{n-k}} (1-y)^p }
+       \brs{\deriv{^k}{y^k}\fP_m(y) }
        \right|_{y=0}
     \qquad\text{by \pref{lem:LGPR} (Leibnitz rule)}
   \\&= \left.
        \sum_{k=0}^n {n\choose k}
-       \left[\deriv{^{n-k}}{y^{n-k}} (1-y)^p \right]
-       \left[\deriv{^k}{y^k} \sum_{m=0}^{p-1}{p-1+m \choose m} y^m \right]
+       \brs{\deriv{^{n-k}}{y^{n-k}} (1-y)^p }
+       \brs{\deriv{^k}{y^k} \sum_{m=0}^{p-1}{p-1+m \choose m} y^m }
        \right|_{y=0}
     \quad\text{by definition of $\fP_m(y)$}
   \\&= \left.
        \sum_{k=0}^n {n\choose k}
-       \left[(-1)^{n-k}\frac{p!}{(p-n+k)!} (1-y)^{(p-n+k)} \right]
-       \left[\sum_{m=k}^{p-1}{p-1+m \choose m} \frac{m!}{(m-k)!}y^{m-k} \right]
+       \brs{(-1)^{n-k}\frac{p!}{(p-n+k)!} (1-y)^{(p-n+k)} }
+       \brs{\sum_{m=k}^{p-1}{p-1+m \choose m} \frac{m!}{(m-k)!}y^{m-k} }
        \right|_{y=0}
   \\&= \sum_{k=0}^n {n\choose k}
-       \left[(-1)^{n-k}\frac{p!}{(p-n+k)!}\right]
-       \left[{p-1+k \choose k} k! \right]
+       \brs{(-1)^{n-k}\frac{p!}{(p-n+k)!}}
+       \brs{{p-1+k \choose k} k! }
   \\&= \sum_{k=0}^n {n\choose k}
-       \left[(-1)^{n-k}\frac{p!}{(p-n+k)!}\right]
-       \left[\frac{(p-1+k)!}{(p-1)!k!}\; k! \right]
+       \brs{(-1)^{n-k}\frac{p!}{(p-n+k)!}}
+       \brs{\frac{(p-1+k)!}{(p-1)!k!}\; k! }
   \\&= (-1)^n p
        \sum_{k=0}^n {n\choose k}
        (-1)^k\frac{(p+k-1)!}{(p+k-n)!}
@@ -744,16 +759,16 @@ Let
 
   \item Proof that $\ff^{(n)}(1)=0$ for $n=0,1,2,\ldots,p-1$:
   \begin{align*}
-  \left.\deriv{^n}{y^n}\left[ (1-y)^p \fP_m(y) \right]\right|_{y=1}
+  \left.\deriv{^n}{y^n}\brs{ (1-y)^p \fP_m(y) }\right|_{y=1}
     &= \left.
        \sum_{k=0}^n {n\choose k}
-       \left[\deriv{^k}{y^k} (1-y)^p \right]
+       \brs{\deriv{^k}{y^k} (1-y)^p }
        \fP_m^{(n-k)}(y)
        \right|_{y=1}
     && \text{by \pref{lem:LGPR} (Leibnitz rule)}
   \\&= \left.
        \sum_{k=0}^n {n\choose k}
-       \left[(-1)^k\frac{p!}{(p-k)!} (1-y)^{p-k} \right]
+       \brs{(-1)^k\frac{p!}{(p-k)!} (1-y)^{p-k} }
        \fP_m^{(n-k)}(y)
        \right|_{y=1}
   \\&= \left.
