--- a/common/intro.tex
+++ b/common/intro.tex
@@ -73,8 +73,8 @@
     \footnotemark
   }
   {../common/people/small/hardy.jpg}
-  {A mathematician, like a painter or a poet, is a maker of patterns. 
-   If his patterns are more permanent than theirs, 
+  {A mathematician, like a painter or a poet, is a maker of patterns.
+   If his patterns are more permanent than theirs,
    it is because they are made with \emph{ideas}.}
   \citetblt{
     quote: & \citerc{hardy1940}{section 10} \\
@@ -128,8 +128,8 @@ but by the measure of beauty that it helps create.
     \footnotemark
   }
   {../common/people/small/poincare.jpg}
-  {\ldots on fait la science avec des faits comme une maison avec des pierres ; 
-   mais une accumulation de faits n'est pas plus une science qu'un tas de 
+  {\ldots on fait la science avec des faits comme une maison avec des pierres ;
+   mais une accumulation de faits n'est pas plus une science qu'un tas de
    pierres n'est une maison.}
   {Science is built up of facts, as a house is built of stones;
    but an accumulation of facts is no more a science than a heap of stones is a house.}
@@ -160,7 +160,7 @@ but by the measure of beauty that it helps create.
     image: & \url{http://en.wikipedia.org/wiki/Image:FreemanDysonOSCON2004.jpg}
     }
 
-Just as in paintings and architectural works, 
+Just as in paintings and architectural works,
 the art that is mathematics is often demonstrated in the structure inherent in it.
 This text tries to show some of that structure.
 
@@ -217,11 +217,11 @@ This text tries to show some of that structure.
 \qboxnps
   {Norbert Wiener}
   {../common/people/wiener.jpg}
-  {There are fields of scientific work ... which have been explored from the different sides of 
-   pure mathematics, statistics, electrical engineering, and neurophysiology; 
-   in which every single notion receives a separate name from each group, 
-   and in which important work has been triplicated or quadruplicated, 
-   while still other important work is delayed by the unavailability in one field of results that 
+  {There are fields of scientific work ... which have been explored from the different sides of
+   pure mathematics, statistics, electrical engineering, and neurophysiology;
+   in which every single notion receives a separate name from each group,
+   and in which important work has been triplicated or quadruplicated,
+   while still other important work is delayed by the unavailability in one field of results that
    may have already become classical in the next field.}
   \citetblt{
     quote: \citerpc{wiener1948}{2}{Introduction}
@@ -264,10 +264,10 @@ but rather in how well it is connected too and helps connect other mathematical 
     \footnotemark
   }
   {../common/people/small/poincare.jpg}
-  {Les math\'ematiciens n'\'etudient pas des objets, 
-   mais des relations entre les objets; 
-   il leur est donc indiff\'erent de remplacer ces objets par d'autres, 
-   pourvu que les relations ne changent pas. 
+  {Les math\'ematiciens n'\'etudient pas des objets,
+   mais des relations entre les objets;
+   il leur est donc indiff\'erent de remplacer ces objets par d'autres,
+   pourvu que les relations ne changent pas.
    La mati\`ere ne leur importe pas, la forme seule les int\'eresse.}
   {Mathematicians do not study objects, but the relations between objects;
    to them it is a matter of indifference if these objects are replaced by others,
@@ -289,19 +289,19 @@ but rather in how well it is connected too and helps connect other mathematical 
     \footnotemark
   }
   %{../common/people/small/poincare.jpg}
-  {Je ne sais si je n'ai d\'ej\`a` dit quelque part que la Math\'ematique est 
-  l'art de donner le m\^eme nom \`a des choses diff\'erentes. 
-  Il convient que ces choses, diff\'erentes par la mati\`ere, 
-  soient semblables par la forme, qu'elles puissent, 
-  pour ainsi dire, se couler dans le m\^eme moule. 
-  Quand le langage a \'et\'e bien choisi, on est tout \'etonn\'e 
-  de voir que toutes les d\'emonstrations, faites pour un objet connu, 
-  s'appliquent imm\'ediatement \`a beaucoup d'objets nouveaux ; 
+  {Je ne sais si je n'ai d\'ej\`a` dit quelque part que la Math\'ematique est
+  l'art de donner le m\^eme nom \`a des choses diff\'erentes.
+  Il convient que ces choses, diff\'erentes par la mati\`ere,
+  soient semblables par la forme, qu'elles puissent,
+  pour ainsi dire, se couler dans le m\^eme moule.
+  Quand le langage a \'et\'e bien choisi, on est tout \'etonn\'e
+  de voir que toutes les d\'emonstrations, faites pour un objet connu,
+  s'appliquent imm\'ediatement \`a beaucoup d'objets nouveaux ;
   on n'a rien \`a y changer, pas m\^eme les mots, puisque les noms sont devenus les m\^emes.}
   %
   {I think I have already said somewhere that mathematics is the art
-   of giving the same name to different things. 
-   It is enough that these things, though differing in matter, 
+   of giving the same name to different things.
+   It is enough that these things, though differing in matter,
    should be similar in form, to permit of their being, so to speak,
    run in the same mould.
    When language has been well chosen, one is astonished to find that all
@@ -316,7 +316,7 @@ but rather in how well it is connected too and helps connect other mathematical 
     }
 
 The twentieth century was the century of abstraction in mathematics.%
-\footnote{This concept of generalization so prevelant in 
+\footnote{This concept of generalization so prevelant in
 twentieth century mathematics was well described by Van de Vel:
 ``It is typical of an axiomatic approach not to emphasize what an object \emph{\bf represents},
 but rather how it \emph{\bf behaves}."---\citerp{vel1993}{3}
@@ -332,28 +332,28 @@ Here are some examples:\citetbl{
   \citor{birkhoff1948}
   }
 \begin{liste}
-  \item In 1888, Giuseppe Peano introduced the \hie{vector space}, 
+  \item In 1888, Giuseppe Peano introduced the \hie{vector space},
         a generalization of real functions.
 
-  \item In 1893, Heinrich Weber introduced the algebraic \hie{field}, 
+  \item In 1893, Heinrich Weber introduced the algebraic \hie{field},
         a generalization of the real numbers and associated arithmetic.
 
   \item In 1900, Richard Dedekind introduced \hie{modularity}, a generalization of
         \prop{distributivity}.
 
   \item In 1906, Maurice Ren\'e Fr\'echet
-        introduced the concepts of the \hie{abstract space} as well as the 
-        \hie{metric space}, which generalize concepts in analysis involving 
+        introduced the concepts of the \hie{abstract space} as well as the
+        \hie{metric space}, which generalize concepts in analysis involving
         convergence.
 
-  \item In 1914, Felix Hausdorff introduced the modern concept of the 
-        \hie{topological space}, a further generalization of the 
+  \item In 1914, Felix Hausdorff introduced the modern concept of the
+        \hie{topological space}, a further generalization of the
         already very general metric space.
 
   \item In 1922, Stephen Banach introduced the \hie{normed linear space},
         a generalization of operations involving integration.
 
-  \item In 1929, John von Neumann introduced the \hie{Hilbert space}, a 
+  \item In 1929, John von Neumann introduced the \hie{Hilbert space}, a
         generalization of earlier work by Hilbert involving integral operations.
 
   \item In 1948, Garrett Birkhoff introduced the \hie{lattice},
@@ -422,20 +422,20 @@ without having to prove everything all over again.
     \footnotemark
   }
   {../common/people/weylhermann_wkp_free.jpg}
-  {Nevertheless I should not pass over in silence the fact that today the 
-   feeling among mathematicians is beginning to spread that the fertility 
-   of these abstracting methods is approaching exhaustion. 
-   The case is this: that all these nice general concepts do not fall into our laps by themselves. 
-   But definite concrete problems were first conquered in their undivided complexity, 
-   singlehanded by brute force, so to speak. Only afterwards the axiomaticians came along and stated: 
-   Instead of breaking the door with all your might and bruising your hands, 
-   you should have constructed such and such a key of skill, 
-   and by it you would have been able to open the door quite smoothly. 
-   But they can construct the key only because they are able, after the breaking in was successful, 
-   to study the lock from within and without. 
+  {Nevertheless I should not pass over in silence the fact that today the
+   feeling among mathematicians is beginning to spread that the fertility
+   of these abstracting methods is approaching exhaustion.
+   The case is this: that all these nice general concepts do not fall into our laps by themselves.
+   But definite concrete problems were first conquered in their undivided complexity,
+   singlehanded by brute force, so to speak. Only afterwards the axiomaticians came along and stated:
+   Instead of breaking the door with all your might and bruising your hands,
+   you should have constructed such and such a key of skill,
+   and by it you would have been able to open the door quite smoothly.
+   But they can construct the key only because they are able, after the breaking in was successful,
+   to study the lock from within and without.
    Before you can generalize, formalize, and axiomatize, there must be a mathematical substance.}
   \footnotetext{
-    quote: \citePpc{weyl1935}{14}{H. Weyl, quoting himself in ``a conference on topology and abstract algebra as two ways of mathematical understanding, in 1931"}. 
+    quote: \citePpc{weyl1935}{14}{H. Weyl, quoting himself in ``a conference on topology and abstract algebra as two ways of mathematical understanding, in 1931"}.
     image: \url{https://en.wikipedia.org/wiki/File:Hermann_Weyl_ETH-Bib_Portr_00890.jpg}: ``This work is free and may be used by anyone for any purpose."
     }
 
@@ -507,8 +507,8 @@ and will hopefully also help give value to the abstract concepts.
   Mathematics has for centuries been held in esteem because of its ability to
   solve practical problems.
 \end{minipage}
-Before the century of generalization---the twentieth century---and the 
-century of precision---the nineteenth century---came several centuries of 
+Before the century of generalization---the twentieth century---and the
+century of precision---the nineteenth century---came several centuries of
 applications.
 In fact, mathematics came to enjoy one of its finest hours during the
 European Renaissance.
@@ -542,19 +542,19 @@ at least in the beginning, as {\em My Professor}
 
 But it is not that applications are no longer important to mathematics,
 but rather applications drive mathematics forward.
-Evidence of this hypothesis is given in 
+Evidence of this hypothesis is given in
 \prefpp{fig:intro_timeline}.\footnote{Data for \prefpp{fig:intro_timeline} extracted from \\
   \url{http://www-history.mcs.st-andrews.ac.uk/Timelines/WhoWasThere.html}}
 This graph shows the number of ``notable" mathematicians alive during the last 3000 years;
 And a ``notable mathematician" is here defined as one whose name appears
-in \hie{Saint Andrew's University's} \hie{Who Was There} 
+in \hie{Saint Andrew's University's} \hie{Who Was There}
 website.\footnote{\url{http://www-history.mcs.st-andrews.ac.uk/Timelines/WhoWasThere.html}}
 Note the following:
 \begin{liste}
 
-\item The number of mathematicians starts to exponentially increase at 
+\item The number of mathematicians starts to exponentially increase at
 about the time of Gutenberg's invention of the printing press---
-that is, when information of discoveries and results could be widely and economically 
+that is, when information of discoveries and results could be widely and economically
 circulated.\footnote{This point is also made by Resnikoff and Wells in\\
 \citerp{resnikoff}{9}.}
 
@@ -564,21 +564,21 @@ that is, when computational power increased.
 \item There are huge increases around the time of the first and second industrial revolutions---
 that is, when there were many {\bf applications} that called for mathematical solutions.
 
-\item After the invention of the pocket scientific calculator in 1972 
-and home IBM PC in 1981---machines that could 
-often make hard-core mathmatical analysis unnecessary in real-world applications---
-there was a huge drop in the number of mathematicians.
+\item After the invention of the pocket scientific calculator in 1972
+and home IBM PC in 1981---machines that could
+often make hard-core mathematical analysis unnecessary in real-world applications---there
+was a huge drop in the number of mathematicians.
 
 \end{liste}
 
-The point here is, that however little some mathematicians may think of 
+The point here is, that however little some mathematicians may think of
 real-world applications,
-historically it would seem that applications are critical to 
-how well mathematics thrives and develops. 
-When mathematics is needed for the development of applications, 
+historically it would seem that applications are critical to
+how well mathematics thrives and develops.
+When mathematics is needed for the development of applications,
 mathematics prospers.
 But when mathematics is not viewed as critical to those applications
-(such as after the introduction of the personal computer), 
+(such as after the introduction of the personal computer),
 mathematics withers.
 
 
@@ -586,9 +586,9 @@ mathematics withers.
 \section*{Writing style}
 %=======================================
 \qboxnpqt
-  { %\href{http://www-history.mcs.st-andrews.ac.uk/Biographies/Poincare.html}{Jules Henri Poincar\'e} 
-    \href{http://en.wikipedia.org/wiki/Henri_Poincar\%C3\%A9}{Jules Henri Poincar\'e} 
-    \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineF.html}{(1854--1912)}, 
+  { %\href{http://www-history.mcs.st-andrews.ac.uk/Biographies/Poincare.html}{Jules Henri Poincar\'e}
+    \href{http://en.wikipedia.org/wiki/Henri_Poincar\%C3\%A9}{Jules Henri Poincar\'e}
+    \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineF.html}{(1854--1912)},
     \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/France.html}{French physicist and mathematician}
     \index{Poincar\'e, Jules Henri}
     \index{quotes!Poincar\'e, Jules Henri}
