--- a/common/sty/switches.sty
+++ b/common/sty/switches.sty
@@ -72,6 +72,7 @@
 \newboolean{integrat}
 \newboolean{interpo}
 \newboolean{intro}
+\newboolean{larc}
 \newboolean{lattice}
 \newboolean{laplace}
 \newboolean{latb}
