--- a/common/sums.tex
+++ b/common/sums.tex
@@ -5,6 +5,8 @@
 
 %======================================
 \chapter{Finite Sums}
+\label{app:pmean}
+\label{chp:pmean}
 %======================================
 
 %=======================================
